# goph419-f2023-lab02-stSL

./: README.md  pyproject.toml
examples/: driver.py  test.py
src/: driver.py  linalg_interp.py  test.py
src/lab02/: linalg_interp.py
