[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lab02"
version = "0.0.1"
authors = [
{ name="Stephen Liu", email="stephen.liul@ucalgary.ca" },
]
description="iterative matrix solvers and spline interpolation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: OSI Approved :: GNU General Public License v3",
]

[project.urls]
"Homepage" = "https://github.com/stephenliu-ucalgary/goph419-lab02-stSL"
